<resources>
    <string name="app_name">倒计时</string>
    <string name="save">保存</string>
    <string name="timing_method">计时模式</string>
    <string name="countdown_method">倒计时模式</string>
    <string name="no_cycle">不重复</string>
    <string name="day_cycle">每日重复</string>
    <string name="week_cycle">每周重复</string>
    <string name="month_cycle">每月重复</string>
    <string name="year_cycle">每年重复</string>

    <string name="title_time">时间调整</string>
    <string name="title_settings">偏好设置</string>
    <string name="title_font">字体设置</string>
    <string name="hint_font_info">显示内容</string>
    <string name="title_text">内容编辑</string>
    <string name="title_color">颜色调整</string>
    <string name="title_background_gradient">背景颜色</string>
    <string name="title_card">卡片调整</string>
    <string name="title_location">位置调整</string>

    <string name="key_name_day_with_month">月日期</string>
    <string name="key_name_day_with_year">年日期</string>
    <string name="key_name_day_with_week">周日期</string>

    <string name="key_name_month">月份</string>
    <string name="key_name_month_full">定长月份</string>
    <string name="key_name_month_japan">日语月份</string>
    <string name="key_name_month_english">英语月份</string>

    <string name="key_name_year">年份</string>
    <string name="key_name_year_full">定长年份</string>

    <string name="key_name_week">星期</string>
    <string name="key_name_week_japan">日语星期</string>
    <string name="key_name_week_english">英语星期</string>
    <string name="key_name_month_traditional">繁体月份</string>
    <string name="key_name_month_china">中文月份</string>
    <string name="key_name_week_traditional">繁体星期</string>
    <string name="key_name_week_chinese">汉语星期</string>

    <string name="key_name_hour">小时</string>
    <string name="key_name_hour_full">定长小时</string>

    <string name="key_name_minute">分钟</string>
    <string name="key_name_minute_full">定长分钟</string>

    <string name="key_name_time_china">汉语时间</string>
    <string name="key_name_time_english">英语时间</string>

    <string name="key_name_countdown_days">倒计时天数</string>
    <string name="key_name_countdown_day_of_month">按月倒计天数</string>
    <string name="key_name_countdown_day_of_year">按年倒计天数</string>
    <string name="key_name_countdown_day_of_week">按周倒计天数</string>
    <string name="key_name_countdown_hour">倒计小时</string>
    <string name="key_name_countdown_hour_full">定长倒计小时</string>
    <string name="key_name_countdown_hour_day">一天的倒计小时</string>
    <string name="key_name_countdown_hour_day_full">一天的定长倒计小时</string>
    <string name="key_name_countdown_minute">倒计分钟</string>
    <string name="key_name_countdown_minute_full">定长倒计分钟</string>
    <string name="key_name_countdown_minute_hour">小时内的倒计分钟</string>
    <string name="key_name_countdown_minute_hour_full">小时内的定长倒计分钟</string>

    <string name="title_background_image">背景图片</string>
    <string name="confirm">确定</string>
    <string name="show_background">显示背景</string>

    <string name="card_corner">卡片圆角</string>
    <string name="card_elevation">海拔阴影</string>
    <string name="card_left">左侧边距</string>
    <string name="card_top">顶部边距</string>
    <string name="card_right">右侧边距</string>
    <string name="card_bottom">底部边距</string>
    <string name="card_height">卡片高度</string>
    <string name="card_width">卡片宽度</string>
    <string name="copyright">Make by Lollipop</string>

    <string name="widget_list_all">全部</string>
    <string name="widget_list_shown">已展示</string>
    <string name="widget_list_hide">未展示</string>
    <string name="add_widget">添加小部件</string>

</resources>
