<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:id="@+id/timeBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:id="@+id/dateBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeBtn"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dateBtn"
            android:id="@+id/timingMethodScroll"
            android:layout_marginTop="10dp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timingMethodGroup"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timingMethodBtn"
                    android:text="@string/timing_method"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/radioTextColor"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/countdownMethodBtn"
                    android:text="@string/countdown_method"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:checked="true"
                    android:textColor="@color/radioTextColor"/>
            </RadioGroup>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/timingMethodScroll"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/cycleModeScroll"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cycleModeGroup"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noCycleBtn"
                    android:text="@string/no_cycle"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:checked="true"
                    android:textColor="@color/radioTextColor"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dayCycleBtn"
                    android:text="@string/day_cycle"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/radioTextColor"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weekCycleBtn"
                    android:text="@string/week_cycle"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/radioTextColor"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/monthCycleBtn"
                    android:text="@string/month_cycle"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/radioTextColor"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yearCycleBtn"
                    android:text="@string/year_cycle"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/radioTextColor"/>
            </RadioGroup>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>